--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,10 @@
 
 export(checkWQPdates)
 export(constructNWISURL)
+export(constructUseURL)
 export(constructWQPURL)
 export(countyCd)
+export(countyCdLookup)
 export(getWebServiceData)
 export(importRDB1)
 export(importWQP)
@@ -20,6 +22,8 @@ export(readNWISpeak)
 export(readNWISqw)
 export(readNWISrating)
 export(readNWISsite)
+export(readNWISstat)
+export(readNWISuse)
 export(readNWISuv)
 export(readWQPdata)
 export(readWQPqw)
