Getting rid of all notes/warnings.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(readNWISpeak)
 export(readNWISqw)
 export(readNWISrating)
 export(readNWISsite)
+export(readNWISstat)
 export(readNWISuv)
 export(readWQPdata)
 export(readWQPqw)
