--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(whatNWISdata)
 export(whatNWISsites)
 export(whatWQPsites)
 export(zeroPad)
+import(lubridate)
 import(stats)
 import(utils)
 importFrom(XML,xmlAttrs)
