main data frame retrieval is working

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(getWebServiceData)
 export(importRDB1)
 export(importWQP)
 export(importWaterML1)
+export(importWaterML1_V2)
 export(importWaterML2)
 export(pCodeToName)
 export(parameterCdFile)
@@ -35,8 +36,10 @@ export(whatNWISdata)
 export(whatNWISsites)
 export(whatWQPsites)
 export(zeroPad)
+import(lubridate)
 import(stats)
 import(utils)
+import(xml2)
 importFrom(XML,xmlAttrs)
 importFrom(XML,xmlDoc)
 importFrom(XML,xmlName)
