before upstream pull

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,7 @@ export(getWebServiceData)
 export(importRDB1)
 export(importWQP)
 export(importWaterML1)
-export(importWaterML1_V2)
+export(importWaterML1_orig)
 export(importWaterML2)
 export(pCodeToName)
 export(parameterCdFile)
@@ -53,6 +53,7 @@ importFrom(XML,xmlValue)
 importFrom(XML,xpathApply)
 importFrom(XML,xpathSApply)
 importFrom(curl,curl_version)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,full_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate_)
