--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,7 +39,6 @@ export(zeroPad)
 import(lubridate)
 import(stats)
 import(utils)
-import(xml2)
 importFrom(XML,xmlAttrs)
 importFrom(XML,xmlDoc)
 importFrom(XML,xmlName)
@@ -79,3 +78,10 @@ importFrom(readr,read_delim)
 importFrom(readr,read_lines)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
+importFrom(xml2,read_xml)
+importFrom(xml2,xml_attr)
+importFrom(xml2,xml_attrs)
+importFrom(xml2,xml_children)
+importFrom(xml2,xml_find_all)
+importFrom(xml2,xml_name)
+importFrom(xml2,xml_text)
