--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,7 +42,6 @@ importFrom(XML,xmlAttrs)
 importFrom(XML,xmlDoc)
 importFrom(XML,xmlName)
 importFrom(XML,xmlNamespaceDefinitions)
-importFrom(XML,xmlParse)
 importFrom(XML,xmlRoot)
 importFrom(XML,xmlSize)
 importFrom(XML,xmlTreeParse)
@@ -82,4 +81,5 @@ importFrom(xml2,xml_attrs)
 importFrom(xml2,xml_children)
 importFrom(xml2,xml_find_all)
 importFrom(xml2,xml_name)
+importFrom(xml2,xml_root)
 importFrom(xml2,xml_text)
