--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(importRDB1)
 export(importWQP)
 export(importWaterML1)
 export(importWaterML2)
+export(importWaterML2_V2)
 export(pCodeToName)
 export(parameterCdFile)
 export(readNWISdata)
