--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(constructWQPURL)
 export(countyCd)
 export(countyCdLookup)
 export(getWebServiceData)
+export(importNGMWN_wml2)
 export(importRDB1)
 export(importWQP)
 export(importWaterML1)
