--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(importWaterML1)
 export(importWaterML2)
 export(pCodeToName)
 export(parameterCdFile)
+export(readNGWMNdata)
 export(readNWISdata)
 export(readNWISdv)
 export(readNWISgwl)
@@ -47,6 +48,7 @@ importFrom(curl,curl_version)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,full_join)
 importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_)
 importFrom(dplyr,mutate_each_)
 importFrom(dplyr,rbind_all)
