comments all addressed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ importFrom(XML,xmlSize)
 importFrom(XML,xmlTreeParse)
 importFrom(XML,xpathApply)
 importFrom(curl,curl_version)
+importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,full_join)
 importFrom(dplyr,left_join)
