two user-friendly functions ready

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,8 @@ export(importWaterML1)
 export(importWaterML2)
 export(pCodeToName)
 export(parameterCdFile)
-export(readNGWMNdata)
+export(readNGWMNlevels)
+export(readNGWMNsites)
 export(readNWISdata)
 export(readNWISdv)
 export(readNWISgwl)
