Help files and version update

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: dataRetrieval
 Type: Package
 Title: Retrieval Functions for USGS and EPA Hydrologic and Water Quality Data
-Version: 2.5.12
-Date: 2016-08-08
+Version: 2.6.0
+Date: 2016-08-26
 Authors@R: c( person("Robert", "Hirsch", role = c("aut"),
     email = "rhirsch@usgs.gov"),
     person("Laura", "DeCicco", role = c("aut","cre"),
@@ -13,7 +13,7 @@ Authors@R: c( person("Robert", "Hirsch", role = c("aut"),
     email = "jread@usgs.gov"),
     person("Lindsay","Carr", role=c("ctb"),
     email = "lcarr@usgs.gov"),
-    person("David","Watkins", role=c("ctb"),
+    person("David","Watkins", role=c("aut"),
     email = "wwatkins@usgs.gov"))
 Description: Collection of functions to help retrieve U.S. Geological Survey
     (USGS) and U.S. Environmental Protection Agency (EPA) water quality and
