bbox working from retrieveFeatureOfInterest

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(importWaterML1)
 export(importWaterML2)
 export(pCodeToName)
 export(parameterCdFile)
+export(readNGWMNdata)
 export(readNGWMNlevels)
 export(readNGWMNsites)
 export(readNWISdata)
@@ -31,6 +32,7 @@ export(readNWISuv)
 export(readWQPdata)
 export(readWQPqw)
 export(renameNWISColumns)
+export(retrieveFeatureOfInterest)
 export(setAccess)
 export(stateCd)
 export(stateCdLookup)
@@ -43,6 +45,7 @@ import(stats)
 import(utils)
 importFrom(curl,curl_version)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,full_join)
 importFrom(dplyr,left_join)
@@ -75,6 +78,7 @@ importFrom(xml2,xml_attr)
 importFrom(xml2,xml_attrs)
 importFrom(xml2,xml_children)
 importFrom(xml2,xml_find_all)
+importFrom(xml2,xml_find_first)
 importFrom(xml2,xml_name)
 importFrom(xml2,xml_root)
 importFrom(xml2,xml_text)
