small changes.  Need to reorganize branches to split off NGWMN stuff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ importFrom(readr,read_delim)
 importFrom(readr,read_lines)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
+importFrom(stats,na.omit)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_attr)
 importFrom(xml2,xml_attrs)
