winbuild picked up some bad urls

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,5 +45,5 @@ Suggests:
 VignetteBuilder: knitr
 BuildVignettes: true
 BugReports: https://github.com/USGS-R/dataRetrieval/issues
-URL: https://github.com/USGS-R/dataRetrieval, http://pubs.usgs.gov/tm/04/a10/
+URL: https://github.com/USGS-R/dataRetrieval, https://pubs.usgs.gov/tm/04/a10/
 RoxygenNote: 5.0.1
