--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ Copyright: This software is in the public domain because it contains materials
     that originally came from the United States Geological Survey, an agency of
     the United States Department of Interior. For more information, see the
     official USGS copyright policy at
-    https://www.usgs.gov/visual-id/credit_usgs.html#copyright
+    https://www2.usgs.gov/visual-id/credit_usgs.html#copyright
 Depends:
     R (>= 3.0)
 Imports:
@@ -45,5 +45,5 @@ Suggests:
 VignetteBuilder: knitr
 BuildVignettes: true
 BugReports: https://github.com/USGS-R/dataRetrieval/issues
-URL: https://github.com/USGS-R/dataRetrieval, https://pubs.usgs.gov/tm/04/a10/
+URL: https://github.com/USGS-R/dataRetrieval, http://pubs.usgs.gov/tm/04/a10/
 RoxygenNote: 5.0.1
