addWaterYear message if col already exists, rearrange so waterYear is next to dateTime

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate_)
 importFrom(dplyr,mutate_each_)
 importFrom(dplyr,rbind_all)
+importFrom(dplyr,select)
 importFrom(dplyr,select_)
 importFrom(httr,GET)
 importFrom(httr,HEAD)
