need to explicitly load dplyr::everything

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ import(utils)
 importFrom(curl,curl_version)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,everything)
 importFrom(dplyr,full_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate_)
