Starting off sampling activities

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(stateCd)
 export(stateCdLookup)
 export(whatNWISdata)
 export(whatNWISsites)
+export(whatWQPdata)
 export(whatWQPsites)
 export(zeroPad)
 import(lubridate)
