--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ importFrom(httr,GET)
 importFrom(httr,HEAD)
 importFrom(httr,RETRY)
 importFrom(httr,content)
+importFrom(httr,content_type)
 importFrom(httr,headers)
 importFrom(httr,status_code)
 importFrom(httr,stop_for_status)
