Add in Sampling service

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,7 +35,7 @@ export(stateCd)
 export(stateCdLookup)
 export(whatNWISdata)
 export(whatNWISsites)
-export(whatWQPdata)
+export(whatWQPsamples)
 export(whatWQPsites)
 export(zeroPad)
 import(lubridate)
