--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(stateCd)
 export(stateCdLookup)
 export(whatNWISdata)
 export(whatNWISsites)
+export(whatWQPdata)
 export(whatWQPsamples)
 export(whatWQPsites)
 export(zeroPad)
