--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ importFrom(httr,status_code)
 importFrom(httr,stop_for_status)
 importFrom(httr,user_agent)
 importFrom(httr,write_disk)
+importFrom(jsonlite,fromJSON)
 importFrom(lubridate,fast_strptime)
 importFrom(lubridate,parse_date_time)
 importFrom(readr,col_character)
