Adding metrics. Need a better example and doc, but code should be OK.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(stateCdLookup)
 export(whatNWISdata)
 export(whatNWISsites)
 export(whatWQPdata)
+export(whatWQPmetrics)
 export(whatWQPsamples)
 export(whatWQPsites)
 export(zeroPad)
