split out parseML2Timeseriesin ngwmn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(importWaterML1)
 export(importWaterML2)
 export(pCodeToName)
 export(parameterCdFile)
+export(parseWaterML2Timeseries)
 export(readNGWMNdata)
 export(readNGWMNlevels)
 export(readNGWMNsites)
