Change list to dataframe.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,7 @@ importFrom(readr,read_lines)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(stats,na.omit)
+importFrom(tools,file_ext)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_attr)
 importFrom(xml2,xml_attrs)
