Clean up some notes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,14 +9,13 @@ export(constructWQPURL)
 export(countyCd)
 export(countyCdLookup)
 export(getWebServiceData)
-export(importNGWMN_wml2)
+export(importNGWMN)
 export(importRDB1)
 export(importWQP)
 export(importWaterML1)
 export(importWaterML2)
 export(pCodeToName)
 export(parameterCdFile)
-export(parseWaterML2Timeseries)
 export(readNGWMNdata)
 export(readNGWMNlevels)
 export(readNGWMNsites)
@@ -45,7 +44,6 @@ export(whatWQPmetrics)
 export(whatWQPsamples)
 export(whatWQPsites)
 export(zeroPad)
-import(lubridate)
 import(stats)
 import(utils)
 importFrom(curl,curl_version)
@@ -58,7 +56,6 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_)
 importFrom(dplyr,mutate_each_)
-importFrom(dplyr,rbind_all)
 importFrom(dplyr,select)
 importFrom(dplyr,select_)
 importFrom(httr,GET)
