Extend how long it is allowed to do tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,17 +12,17 @@ r:
   - devel
 sudo: false
 
-repos:
-  CRAN: https://cloud.r-project.org
-
 env:
    global:
      - R_LIBS="http://cran.rstudio.com"
      - R_BUILD_ARGS="--no-build-vignettes --no-manual"
      - R_CHECK_ARGS="--no-build-vignettes --no-manual --as-cran"
      - NOT_CRAN="true"
+     - _R_CHECK_FORCE_SUGGESTS_=false
      
 warnings_are_errors: true
+
+install: travis_wait 20 mvn install
 
 r_github_packages:
   - jimhester/covr
