--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ r_github_packages:
   - jimhester/covr
 
 after_success:
-  - Rscript -e 'covr::codecov()'
+  - Rscript -e 'covr::coveralls()'
   
 notifications:
   email:
