Does this get the "wait" in?

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,7 @@ env:
      - NOT_CRAN="true"
      - _R_CHECK_FORCE_SUGGESTS_=false
      
-install:
-  - travis_wait 30 Rscript -e "0" 
+script: travis_wait 30 ./travis-tool.sh run_tests
      
 warnings_are_errors: true
 
