better error messages for 400 status

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,7 @@ importFrom(tools,file_ext)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_attr)
 importFrom(xml2,xml_attrs)
+importFrom(xml2,xml_child)
 importFrom(xml2,xml_children)
 importFrom(xml2,xml_find_all)
 importFrom(xml2,xml_find_first)
