Putting this back

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ addons:
 
 env:
    global:
+     - R_BUILD_ARGS="--no-build-vignettes --no-manual"
+     - R_CHECK_ARGS="--no-build-vignettes --no-manual --as-cran"
      - NOT_CRAN="true"
      - _R_CHECK_FORCE_SUGGESTS_=false
      
