Cleaning up travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,8 @@ r_github_packages:
   
 script: 
   - |
-    R CMD build . --no-build-vignettes --no-manual --no-resave-data
-    travis_wait 30 R CMD check dataRetrieval*tar.gz --no-build-vignettes --no-manual --as-cran
+    R CMD build . 
+    travis_wait 60 R CMD check dataRetrieval*tar.gz --as-cran
 
 
 after_success:
