--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,6 @@
 pandoc: 2.7.1
-pkgdown: 1.3.0
-pkgdown_sha: ~
+pkgdown: 1.3.0.9000
+pkgdown_sha: a267beee11ac619011b359471c66178dc13685ab
 articles:
   dataRetrieval: dataRetrieval.html
 
