Adding "searchWQPsites" function to use summary service.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(readNWISuv)
 export(readWQPdata)
 export(readWQPqw)
 export(renameNWISColumns)
+export(searchWQPsites)
 export(setAccess)
 export(stateCd)
 export(stateCdLookup)
@@ -41,7 +42,6 @@ export(whatNWISdata)
 export(whatNWISsites)
 export(whatWQPdata)
 export(whatWQPmetrics)
-export(whatWQPsamples)
 export(whatWQPsites)
 export(zeroPad)
 import(stats)
