Deleted export by mistake

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(whatNWISdata)
 export(whatNWISsites)
 export(whatWQPdata)
 export(whatWQPmetrics)
+export(whatWQPsamples)
 export(whatWQPsites)
 export(zeroPad)
 import(stats)
