Reverting WQP POST infrastructure...rebuilding "site"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,8 +33,8 @@ export(readNWISuse)
 export(readNWISuv)
 export(readWQPdata)
 export(readWQPqw)
+export(readWQPsummary)
 export(renameNWISColumns)
-export(searchWQPsites)
 export(setAccess)
 export(stateCd)
 export(stateCdLookup)
