adding some ignores

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -33,3 +33,6 @@ vignettes/movingAverages.Rmd
 man/figures/highrezlogo-01.png
 man/figures/USGS_R.png
 playing_with_post.R
+^CRAN-RELEASE$
+^cran-comments\.md$
+^revdep$
