--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,6 @@
 pandoc: 2.7.2
-pkgdown: 1.3.0.9000
-pkgdown_sha: 04e3f6ee259b17bed7246f237652e4ba7d6742d4
+pkgdown: 1.4.1
+pkgdown_sha: ~
 articles:
   dataRetrieval: dataRetrieval.html
   earthquake: earthquake.html
