--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -37,6 +37,10 @@ jobs:
         run: |
           install.packages(c("remotes"))
           remotes::install_deps(dependencies = TRUE)
+          remotes::install_github("jimhester/pkgdown@github-actions-deploy2")
+        shell: Rscript {0}
+      - name: Install package
+        run: |
           remotes::install_cran("covr")
         shell: Rscript {0}
 
