--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -7,8 +7,6 @@ name: pkgdown
 jobs:
   pkgdown:
     runs-on: macOS-latest
-    env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
 
@@ -31,6 +29,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          options(pkgType = "binary")
           install.packages("remotes")
           remotes::install_deps(dependencies = TRUE)
           remotes::install_dev("pkgdown")
