--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Install dependencies
         run: |
           options(pkgType = "binary")
-          install.packages(c("remotes", "dplyr", "purrr", "ggplot2", "maptools", "sp", "maps"))
+          install.packages(c("remotes", "dplyr", "purrr", "ggplot2", "maptools", "sp", "maps", "rgdal"))
           remotes::install_deps(dependencies = TRUE)
           remotes::install_dev("pkgdown")
         shell: Rscript {0}
