--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,12 +8,14 @@ export(constructUseURL)
 export(constructWQPURL)
 export(countyCd)
 export(countyCdLookup)
+export(findNLDI)
 export(getWebServiceData)
 export(importNGWMN)
 export(importRDB1)
 export(importWQP)
 export(importWaterML1)
 export(importWaterML2)
+export(nldi_offerings)
 export(pCodeToName)
 export(parameterCdFile)
 export(readNGWMNdata)
@@ -47,6 +49,9 @@ export(whatWQPsites)
 export(zeroPad)
 import(stats)
 import(utils)
+importFrom(httr,RETRY)
+importFrom(httr,content)
+importFrom(jsonlite,fromJSON)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_attr)
 importFrom(xml2,xml_attrs)
