Adding rmarkdown to Suggests due to failed tests during pull request.
* creating vignettes ... ERROR

--- re-building 'dataRetrieval.Rmd' using rmarkdown

Warning in engine$weave(file, quiet = quiet, encoding = enc) :

  The vignette engine knitr::rmarkdown is not available because the rmarkdown package is not available. Did you forget to add it to Suggests in DESCRIPTION? Please see https://github.com/yihui/knitr/issues/1864 for more information.

Loading required namespace: sf

--- finished re-building 'dataRetrieval.Rmd'

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,8 +46,9 @@ Suggests:
     gridExtra,
     htmlTable,
     knitr,
-    testthat,
-    sf
+    rmarkdown,
+    sf,
+    testthat
 Encoding: UTF-8
 BuildVignettes: true
 VignetteBuilder: knitr
