Updates from D. Blodgett's Review

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,12 +10,12 @@ export(countyCd)
 export(countyCdLookup)
 export(findNLDI)
 export(getWebServiceData)
+export(get_nldi_sources)
 export(importNGWMN)
 export(importRDB1)
 export(importWQP)
 export(importWaterML1)
 export(importWaterML2)
-export(nldi_offerings)
 export(pCodeToName)
 export(parameterCdFile)
 export(readNGWMNdata)
