--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -39,5 +39,7 @@ jobs:
         run: R CMD INSTALL .
 
       - name: Deploy package
-        run: pkgdown::deploy_to_branch(new_process = FALSE)
+        run: |
+          Sys.setenv(CI = FALSE)
+          pkgdown::deploy_to_branch(new_process = FALSE)
         shell: Rscript {0}
