--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,11 +47,14 @@ export(whatWQPmetrics)
 export(whatWQPsamples)
 export(whatWQPsites)
 export(zeroPad)
-import(stats)
-import(utils)
 importFrom(httr,RETRY)
 importFrom(httr,content)
 importFrom(jsonlite,fromJSON)
+importFrom(stats,setNames)
+importFrom(utils,URLencode)
+importFrom(utils,packageVersion)
+importFrom(utils,tail)
+importFrom(utils,unzip)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_attr)
 importFrom(xml2,xml_attrs)
