--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,15 +6,13 @@ Authors@R: c(
     person("Laura", "DeCicco", role = c("aut","cre"),
     email = "ldecicco@usgs.gov",
     comment=c(ORCID="0000-0002-3915-9487")),
-    person("Robert", "Hirsch", role = c("ctb"),
+    person("Robert", "Hirsch", role = c("aut"),
     comment=c(ORCID="0000-0002-4534-075X")),
-    person("David","Lorenz", role=c("ctb")),
+    person("David","Lorenz", role=c("aut")),
     person("Jordan", "Read", role = c("ctb"),
     email = "jread@usgs.gov"),
-    person("Jordan", "Walker", role = c("ctb"),
-    email = "jiwalker@usgs.gov"),
-    person("Lindsay","Carr", role=c("ctb"),
-    email = "lcarr@usgs.gov"),
+    person("Jordan", "Walker", role = c("ctb")),
+    person("Lindsay","Carr", role=c("ctb")),
     person("David","Watkins", role=c("aut"),
     email = "wwatkins@usgs.gov",
     comment=c(ORCID="0000-0002-7544-0700")),
