--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -30,6 +30,7 @@ vignettes/statsServiceMap.Rmd
 vignettes/usMaps.Rmd
 vignettes/usMaps_cache
 vignettes/movingAverages.Rmd
+vignettes/tutorial_slides.Rmd
 man/figures/highrezlogo-01.png
 man/figures/USGS_R.png
 playing_with_post.R
