Cleaning up windev notes

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -31,6 +31,7 @@ vignettes/usMaps.Rmd
 vignettes/usMaps_cache
 vignettes/movingAverages.Rmd
 vignettes/tutorial_slides.Rmd
+vignettes/nldi*
 man/figures/highrezlogo-01.png
 man/figures/USGS_R.png
 playing_with_post.R
