Does this help?

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -68,6 +68,7 @@ jobs:
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE)
+          install.packages(c('remotes', 'zoo', 'sf'))
           remotes::install_cran("rcmdcheck")
         shell: Rscript {0}
 
