Adding the NWIS qw changes vignette to the banner

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -12,6 +12,8 @@ navbar:
     menu:
     - text: Tutorial
       href: articles/tutorial.html
+    - text: Changes to QW
+      href: articles/qwdata_changes.html
     - text: Moving Averages
       href: articles/movingAverages.html
     - text: Stat Service
