--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -6,38 +6,41 @@ name: pkgdown
 
 jobs:
   pkgdown:
-    runs-on: macOS-latest
+    runs-on: ubuntu-18.04
+    env:
+      RSPM: https://packagemanager.rstudio.com/cran/__linux__/bionic/latest
+      
     steps:
       - uses: actions/checkout@v2
 
-      - uses: r-lib/actions/setup-r@master
+      - uses: r-lib/actions/setup-r@v1
+        id: install-r
 
-      - uses: r-lib/actions/setup-pandoc@master
-
-      - name: Query dependencies
+      - uses: r-lib/actions/setup-pandoc@v1
+      
+      - name: Install pak and query dependencies
         run: |
-          install.packages(c('remotes'))
-          saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
+          install.packages("pak", repos = "https://r-lib.github.io/p/pak/dev/")
+          saveRDS(pak::pkg_deps("local::.", dependencies = TRUE), ".github/r-depends.rds")
         shell: Rscript {0}
-
-      - name: Cache R packages
-        uses: actions/cache@v1
-        with:
-          path: ${{ env.R_LIBS_USER }}
-          key: macOS-r-4.0-3-${{ hashFiles('.github/depends.Rds') }}
-          restore-keys: macOS-r-4.0-3-
-
+        
+        
+      - name: Install system dependencies
+        if: runner.os == 'Linux'
+        run: |
+          pak::local_system_requirements(execute = TRUE)
+          pak::pkg_system_requirements("pkgdown", execute = TRUE)
+        shell: Rscript {0}
+        
       - name: Install dependencies
         run: |
-          options(pkgType = "binary")
-          install.packages(c("remotes", "dplyr", "purrr", "ggplot2", "maptools", "sp", "maps", "rgdal", "leaflet", "sf", "zoo", "udunits2", "patchwork"))
-          remotes::install_deps(dependencies = TRUE)
-          remotes::install_dev("pkgdown")
+          pak::local_install_dev_deps(upgrade = TRUE, dependencies = c("all", "Config/Needs/website"))
+          pak::pkg_install("pkgdown")
         shell: Rscript {0}
 
       - name: Install package
         run: R CMD INSTALL .
-
+  
       - name: Deploy package
         run: |
           Sys.setenv(CI = FALSE)
