Trying the examplesIf

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(importRDB1)
 export(importWQP)
 export(importWaterML1)
 export(importWaterML2)
+export(is_dataRetrieval_user)
 export(pCodeToName)
 export(parameterCdFile)
 export(readNGWMNdata)
