--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Deploy package
         run: |
           git config --local user.name "$GITHUB_ACTOR"
-          git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com" |
+          git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com" 
           options(rmarkdown.html_vignette.check_title = FALSE)
           pkgdown::deploy_to_branch(new_process = FALSE)
         shell: Rscript {0}
