Initial framework for new WQP summary function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(stateCdLookup)
 export(whatNWISdata)
 export(whatNWISsites)
 export(whatWQPdata)
+export(whatWQPdata2)
 export(whatWQPmetrics)
 export(whatWQPsamples)
 export(whatWQPsites)
