--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -24,6 +24,13 @@ jobs:
         with:
           extra-packages: pkgdown
           needs: website
+          
+      - name: Query dependencies
+        run: |
+          install.packages("pak", repos = "https://r-lib.github.io/p/pak/dev/")
+          install.packages('zoo', 'sf', 'DT', 'maps', 'patchwork', 'leaflet')
+          saveRDS(pak::pkg_deps("local::.", dependencies = TRUE), ".github/r-depends.rds")
+        shell: Rscript {0}
 
       - name: Deploy package
         run: |
